docs: fix bug passing arguments to gtkdoc-fixref in upload target
Missing backslash at end of line meant we weren't passing all arguments
to gtkdoc-fixref and we'd get a shell error when doing 'make upload'.

--- a/docs/plugins/Makefile.am
+++ b/docs/plugins/Makefile.am
@@ -54,7 +54,7 @@ MKDB_OPTIONS=--sgml-mode --source-suffixes=c,h,cc,m
 
 # Extra options to supply to gtkdoc-fixref.
 FIXXREF_OPTIONS=--extra-dir=$(GLIB_PREFIX)/share/gtk-doc/html \
-	--extra-dir=$(GST_PREFIX)/share/gtk-doc/html
+	--extra-dir=$(GST_PREFIX)/share/gtk-doc/html \
 	--extra-dir=$(GSTPB_PREFIX)/share/gtk-doc/html
 
 # Used for dependencies.
