pkgconfig: set pluginsdir to top-level builddir without the pkgconfig/.. bits
Removes clutter in plugin dir paths. This is only used to find the -good
plugins for unit tests of ugly/bad/ffmpeg/etc. in an uninstalled setup.

--- a/pkgconfig/gstreamer-plugins-good-uninstalled.pc.in
+++ b/pkgconfig/gstreamer-plugins-good-uninstalled.pc.in
@@ -1,8 +1,8 @@
 prefix=
 exec_prefix=
-libdir=${pcfiledir}/../gst-libs/gst
-includedir=${pcfiledir}/../gst-libs
-pluginsdir=${pcfiledir}/..
+libdir=@abs_top_builddir@/gst-libs/gst
+includedir=@abs_top_builddir@/gst-libs
+pluginsdir=@abs_top_builddir@
 
 Name: GStreamer Good Plugins, Uninstalled
 Description: Streaming media framework, good plugins, uninstalled
