gsettings: fix make distcheck
Clean up file we generated at build time.

--- a/ext/gsettings/Makefile.am
+++ b/ext/gsettings/Makefile.am
@@ -37,3 +37,5 @@ noinst_HEADERS = \
 	gstgsettings.h
 
 EXTRA_DIST = org.freedesktop.gstreamer.default-elements.gschema.xml
+
+CLEANFILES = $(gsettings_SCHEMAS)
