playback: move tests from plugin-dir to tests/examples/playback

--- a/tests/examples/Makefile.am
+++ b/tests/examples/Makefile.am
@@ -8,8 +8,8 @@ if USE_GIO
 GIO_SUBDIRS = gio
 endif
 
-SUBDIRS = app $(FT2_SUBDIRS) $(GIO_SUBDIRS) volume dynamic v4l overlay
+SUBDIRS = app  dynamic $(FT2_SUBDIRS) $(GIO_SUBDIRS) overlay playback volume v4l
 
-DIST_SUBDIRS = app seek volume dynamic snapshot gio v4l overlay
+DIST_SUBDIRS = app dynamic gio overlay playback seek snapshot volume v4l
 
 include $(top_srcdir)/common/parallel-subdirs.mak
