playback: bad bad editor, readd missing line to fix the build

--- a/gst/playback/Makefile.am
+++ b/gst/playback/Makefile.am
@@ -66,6 +66,8 @@ noinst_HEADERS = \
 	gstrawcaps.h \
 	gstsubtitleoverlay.h \
 	gststreamsynchronizer.h
+	
+BUILT_SOURCES = $(built_headers) $(built_sources)
 
 EXTRA_DIST = gstplay-marshal.list
 
