--- a/tests/check/Makefile.am
+++ b/tests/check/Makefile.am
@@ -127,6 +127,7 @@ check_PROGRAMS = \
 	libs/navigation \
 	libs/netbuffer \
 	libs/pbutils \
+	libs/profile \
 	libs/rtp \
 	libs/tag \
 	libs/video \
@@ -237,6 +238,12 @@ libs_pbutils_LDADD = \
 	$(top_builddir)/gst-libs/gst/pbutils/libgstpbutils-@GST_MAJORMINOR@.la \
 	$(top_builddir)/gst-libs/gst/video/libgstvideo-@GST_MAJORMINOR@.la \
 	$(GST_BASE_LIBS) $(LDADD)
+
+libs_profile_CFLAGS = \
+	$(GST_PLUGINS_BASE_CFLAGS) \
+	$(AM_CFLAGS)
+libs_profile_LDADD = \
+	$(top_builddir)/gst-libs/gst/pbutils/libgstpbutils-@GST_MAJORMINOR@.la $(LDADD)
 
 elements_appsink_CFLAGS = \
 	$(GST_PLUGINS_BASE_CFLAGS) \
