--- a/docs/design/Makefile.am
+++ b/docs/design/Makefile.am
@@ -4,6 +4,7 @@ SUBDIRS =
 EXTRA_DIST = \
 	design-audiosinks.txt      \
 	design-decodebin.txt       \
+	design-encoding.txt       \
 	design-orc-integration.txt \
 	draft-keyframe-force.txt   \
 	draft-va.txt               \
