--- a/configure.ac
+++ b/configure.ac
@@ -284,6 +284,7 @@ AG_GST_CHECK_PLUGIN(geometrictransform)
 AG_GST_CHECK_PLUGIN(h264parse)
 AG_GST_CHECK_PLUGIN(hdvparse)
 AG_GST_CHECK_PLUGIN(id3tag)
+AG_GST_CHECK_PLUGIN(interlace)
 AG_GST_CHECK_PLUGIN(invtelecine)
 AG_GST_CHECK_PLUGIN(ivfparse)
 AG_GST_CHECK_PLUGIN(jpegformat)
@@ -1698,6 +1699,7 @@ gst/geometrictransform/Makefile
 gst/h264parse/Makefile
 gst/hdvparse/Makefile
 gst/id3tag/Makefile
+gst/interlace/Makefile
 gst/invtelecine/Makefile
 gst/ivfparse/Makefile
 gst/jpegformat/Makefile
