videomixer: Optimize ARGB blending and implement BGRA blending with orc
This now means, that we have absolutely no handwritten assembly anymore
in videomixer and it's also faster now when using SSE.

--- a/gst/videomixer/Makefile.am
+++ b/gst/videomixer/Makefile.am
@@ -13,4 +13,4 @@ libgstvideomixer_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstvideomixer_la_LIBTOOLFLAGS = --tag=disable-static
 
 # headers we need but don't want installed
-noinst_HEADERS = videomixer.h videomixerpad.h blend.h blend_mmx.h
+noinst_HEADERS = videomixer.h videomixerpad.h blend.h
