configure: Add check for log2
Adds check for log2 and only use it in exif library if it is
available.

--- a/configure.ac
+++ b/configure.ac
@@ -219,6 +219,10 @@ dnl *** checks for functions ***
 AC_CHECK_FUNCS([localtime_r gmtime_r])
 
 dnl *** checks for math functions ***
+LIBS_SAVE=$LIBS
+LIBS="$LIBS $LIBM"
+AC_CHECK_FUNCS(log2)
+LIBS=$LIBS_SAVE
 
 dnl *** checks for types/defines ***
 
