Make the plugin loader work on OSX with the standard python install.

--- a/plugin/Makefile.am
+++ b/plugin/Makefile.am
@@ -3,6 +3,7 @@ plugin_LTLIBRARIES = libgstpython.la
 INCLUDES = $(PYGOBJECT_CFLAGS) $(GST_CFLAGS)\
 	-DPYTHON_VERSION=\"$(PYTHON_VERSION)\"		\
 	-DPY_LIB_LOC="\"$(PYTHON_LIB_LOC)\""		\
+	-DPY_LIB_SUFFIX=$(PYTHON_LIB_SUFFIX) \
 	$(PYTHON_INCLUDES)
 
 libgstpython_la_SOURCES = gstpythonplugin.c
