camerabin: Don't install gst-camera.ui
The examples are not meant to be installed and the executables of
them are not installed anyway.

Fixes bug #627918.

--- a/tests/examples/camerabin/Makefile.am
+++ b/tests/examples/camerabin/Makefile.am
@@ -19,8 +19,7 @@ gst_camera_LDADD   = \
 	$(GTK_LIBS) \
 	$(GMODULE_EXPORT_LIBS)
 
-uidir = $(datadir)/gstreamer-@GST_MAJORMINOR@/camera-apps
-ui_DATA = $(GST_CAMERABIN_UI_FILES)
+noinst_DATA = $(GST_CAMERABIN_UI_FILES)
 
 INCLUDES = -DCAMERA_APPS_UIDIR=\""$(uidir)"\"
 
