--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -5,11 +5,12 @@ SUBDIRS = basicfilters edgedetect faceblur facedetect pyramidsegment templatemat
 plugin_LTLIBRARIES = libgstopencv.la
 
 # sources used to compile this plug-in
-libgstopencv_la_SOURCES = gstopencv.c gstopencvbasetrans.c gstopencvutils.c
+libgstopencv_la_SOURCES = gstopencv.c gstopencvvideofilter.c gstopencvutils.c
 
 # flags used to compile this facedetect
 # add other _CFLAGS and _LIBS as needed
 libgstopencv_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(OPENCV_CFLAGS) \
+			$(GSTPB_BASE_CFLAGS) \
 								 -I${top_srcdir}/src \
 								 -I${top_srcdir}/ext/opencv/basicfilters \
 								 -I${top_srcdir}/ext/opencv/edgedetect \
@@ -20,13 +21,14 @@ libgstopencv_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(OPENCV_CFLAGS) \
 								 -I${top_srcdir}/ext/opencv/textwrite 
 
 libgstopencv_la_LIBADD = $(GST_LIBS) $(GST_BASE_LIBS) $(OPENCV_LIBS) \
-								 $(top_builddir)/ext/opencv/basicfilters/libgstbasicfilters.la \
-								 $(top_builddir)/ext/opencv/edgedetect/libgstedgedetect.la \
-								 $(top_builddir)/ext/opencv/faceblur/libgstfaceblur.la \
-								 $(top_builddir)/ext/opencv/facedetect/libgstfacedetect.la \
-								 $(top_builddir)/ext/opencv/pyramidsegment/libgstpyramidsegment.la \
-								 $(top_builddir)/ext/opencv/templatematch/libgsttemplatematch.la \
-								 $(top_builddir)/ext/opencv/textwrite/libgsttextwrite.la
+			$(GSTPB_BASE_LIBS) -lgstvideo-$(GST_MAJORMINOR) \
+								$(top_builddir)/ext/opencv/basicfilters/libgstbasicfilters.la \
+								$(top_builddir)/ext/opencv/edgedetect/libgstedgedetect.la \
+								$(top_builddir)/ext/opencv/faceblur/libgstfaceblur.la \
+								$(top_builddir)/ext/opencv/facedetect/libgstfacedetect.la \
+								$(top_builddir)/ext/opencv/pyramidsegment/libgstpyramidsegment.la \
+								$(top_builddir)/ext/opencv/templatematch/libgsttemplatematch.la \
+								$(top_builddir)/ext/opencv/textwrite/libgsttextwrite.la
 
 libgstopencv_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
@@ -40,4 +42,4 @@ libgstopencv_la_DEPENDENCIES = \
 								 $(top_builddir)/ext/opencv/textwrite/libgsttextwrite.la
 
 # headers we need but don't want installed
-noinst_HEADERS = gstopencvbasetrans.h gstopencvutils.h
+noinst_HEADERS = gstopencvvideofilter.h gstopencvutils.h
