--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ dnl please read gstreamer/docs/random/autotools before changing this file
 dnl initialize autoconf
 dnl releases only do -Wall, git and prerelease does -Werror too
 dnl use a three digit version number for releases, and four for git/pre
-AC_INIT(GStreamer Good Plug-ins, 0.10.25,
+AC_INIT(GStreamer Good Plug-ins, 0.10.25.1,
     http://bugzilla.gnome.org/enter_bug.cgi?product=GStreamer,
     gst-plugins-good)
 
@@ -1037,7 +1037,8 @@ AC_SUBST(PROFILE_CFLAGS)
 
 if test "x$PACKAGE_VERSION_NANO" = "x1"; then
   dnl Define _only_ for git (not pre-releases or releases)
-  DEPRECATED_CFLAGS="-DGST_DISABLE_DEPRECATED"
+  dnl FIXME: temporarily disabled: DEPRECATED_CFLAGS="-DGST_DISABLE_DEPRECATED"
+  DEPRECATED_CFLAGS=""
 else
   DEPRECATED_CFLAGS=""
 fi
