Back to development
Temporarily disable -DGST_DISABLE_DEPRECATED for git builds until
the code is updated for the GST_FLOW_IS_* macro deprecations.

--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ dnl please read gstreamer/docs/random/autotools before changing this file
 dnl initialize autoconf
 dnl releases only do -Wall, cvs and prerelease does -Werror too
 dnl use a three digit version number for releases, and four for cvs/prerelease
-AC_INIT(GStreamer Ugly Plug-ins, 0.10.16,
+AC_INIT(GStreamer Ugly Plug-ins, 0.10.16.1,
     http://bugzilla.gnome.org/enter_bug.cgi?product=GStreamer,
     gst-plugins-ugly)
 
@@ -423,7 +423,8 @@ AC_SUBST(PROFILE_CFLAGS)
 
 if test "x$PACKAGE_VERSION_NANO" = "x1"; then
   dnl Define _only_ during CVS (not pre-releases or releases)
-  DEPRECATED_CFLAGS="-DGST_DISABLE_DEPRECATED"
+  dnl FIXME: temporarily disabled: DEPRECATED_CFLAGS="-DGST_DISABLE_DEPRECATED"
+  DEPRECATED_CFLAGS=""
 else
   DEPRECATED_CFLAGS=""
 fi
