videotestsrc: Use static sine table

--- a/gst/videotestsrc/Makefile.am
+++ b/gst/videotestsrc/Makefile.am
@@ -15,4 +15,9 @@ libgstvideotestsrc_la_LIBTOOLFLAGS = --tag=disable-static
 
 noinst_HEADERS = gstvideotestsrc.h videotestsrc.h
 
+noinst_PROGRAMS = generate_sine_table
+
+generate_sine_table_SOURCES = generate_sine_table.c
+generate_sine_table_CFLAGS = $(GST_CFLAGS)
+generate_sine_table_LDADD = $(LIBM)
 
