--- a/gst/debugutils/Makefile.am
+++ b/gst/debugutils/Makefile.am
@@ -14,10 +14,15 @@ EXTRA_DIST = debugutils-marshal.list
 
 plugin_LTLIBRARIES = libgstdebugutilsbad.la
 
-libgstdebugutilsbad_la_SOURCES = fpsdisplaysink.c debugutilsbad.c
+libgstdebugutilsbad_la_SOURCES = \
+	fpsdisplaysink.c \
+	debugutilsbad.c \
+	gstchecksumsink.c \
+	gstchecksumsink.h
 nodist_libgstdebugutilsbad_la_SOURCES = $(BUILT_SOURCES)
 libgstdebugutilsbad_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS)
-libgstdebugutilsbad_la_LIBADD = $(GST_BASE_LIBS) $(GST_PLUGINS_BASE_LIBS) -lgstinterfaces-$(GST_MAJORMINOR)
+libgstdebugutilsbad_la_LIBADD = $(GST_BASE_LIBS) $(GST_PLUGINS_BASE_LIBS) \
+	-lgstinterfaces-$(GST_MAJORMINOR) $(GST_LIBS)
 libgstdebugutilsbad_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstdebugutilsbad_la_LIBTOOLFLAGS = --tag=disable-static
 
