tests: fix distcheck by disting new jack example directory
Also add test binary to ignores.

--- a/tests/examples/Makefile.am
+++ b/tests/examples/Makefile.am
@@ -16,4 +16,4 @@ DIRECTFB_DIR=
 endif
 
 SUBDIRS= $(DIRECTFB_DIR) $(GTK_EXAMPLES) $(JACK_EXAMPLES) switch
-DIST_SUBDIRS= camerabin directfb mxf scaletempo switch
+DIST_SUBDIRS= camerabin directfb jack mxf scaletempo switch
