Add gstreamer-plugins-ugly-uninstalled-0.10.pc file so other modules can find our plugins
This .pc file will not be installed, it's only for uninstalled setups,
same thing as we do for -good. This is so other modules' unit tests can
find our plugins properly in an uninstalled setup.

--- a/configure.ac
+++ b/configure.ac
@@ -492,6 +492,8 @@ tests/Makefile
 tests/check/Makefile
 m4/Makefile
 po/Makefile.in
+pkgconfig/Makefile
+pkgconfig/gstreamer-plugins-ugly-uninstalled.pc
 gst-plugins-ugly.spec
 )
 
