opencv: avoid 'unused' compiler warnings with inline functions in opencv headers
Override CV_INLINE to avoid 'unused' gcc warnings. GLib will take care of defining
'inline' sufficiently and OpenCV's define isn't good enough to avoid 'unused'
compiler warnings (at least in version 2.1.0).

--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -20,8 +20,11 @@ libgstopencv_la_SOURCES = gstopencv.c \
 
 # flags used to compile this facedetect
 # add other _CFLAGS and _LIBS as needed
+#
+# override CV_INLINE: GLib will take care of defining 'inline' sufficiently and
+# OpenCV's define isn't good enough to avoid 'unused' gcc warnings (at v2.1.0)
 libgstopencv_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(OPENCV_CFLAGS) \
-			$(GST_PLUGINS_BASE_CFLAGS)
+	$(GST_PLUGINS_BASE_CFLAGS) -DCV_INLINE="static inline"
 
 libgstopencv_la_LIBADD = $(GST_LIBS) $(GST_BASE_LIBS) $(OPENCV_LIBS) \
 			$(GSTPB_BASE_LIBS) -lgstvideo-$(GST_MAJORMINOR)
