metadata: remove metadata plugin
This plugins functionality is replaced by utility libraries in base for exif
and xmp. Jpeg images can use this via jpegformat plugin.
Fixes #486659

--- a/tests/icles/Makefile.am
+++ b/tests/icles/Makefile.am
@@ -11,23 +11,19 @@ else
 GST_SOUNDTOUCH_TESTS = 
 endif
 
-
-if USE_METADATA
-if HAVE_GTK
-
-GST_METADATA_TESTS = metadata_editor
-
-metadata_editor_SOURCES = metadata_editor.h metadata_editor.c
-metadata_editor_CFLAGS  = \
-	$(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS) $(GTK_CFLAGS) $(GMODULE_EXPORT_CFLAGS)
-metadata_editor_LDADD   = \
-	$(GST_PLUGINS_BASE_LIBS) -lgstinterfaces-0.10 $(GST_LIBS) $(GTK_LIBS) $(GMODULE_EXPORT_LIBS)
-else
+# needs porting
+#if HAVE_GTK
+#
+#GST_METADATA_TESTS = metadata_editor
+#
+#metadata_editor_SOURCES = metadata_editor.h metadata_editor.c
+#metadata_editor_CFLAGS  = \
+#	$(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS) $(GTK_CFLAGS) $(GMODULE_EXPORT_CFLAGS)
+#metadata_editor_LDADD   = \
+#	$(GST_PLUGINS_BASE_LIBS) -lgstinterfaces-0.10 $(GST_LIBS) $(GTK_LIBS) $(GMODULE_EXPORT_LIBS)
+#else
 GST_METADATA_TESTS =
-endif
-else
-GST_METADATA_TESTS =
-endif
+#endif
 
 equalizer_test_SOURCES = equalizer-test.c
 equalizer_test_CFLAGS  = $(GST_CFLAGS)
